--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "/type-theme"
-url: "https://rohanchandra.github.io/"
+url: "https://silent-han.github.io/csestudy"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
