--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ url: "https://silent-han.github.io"
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Type Theme
+  title: Silence han
   avatar: assets/img/avatar.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "A website with blog posts and pages" # used by search engines
+  description: "컴공생의 개인 공부 및 강의 내용 정리하는 그런 블로그" # used by search engines
 
   # Header and footer text
 
