--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
-title: IT-блог
+title: CSE study
 description: > # this means to ignore newlines until "baseurl:"
-  Blog with theme Future Imperfect<br>
+  강의 내용 정리 및 개발 공부하는 그런 Blog<br>
 baseurl: "/csestudy" # the subpath of your site, e.g. /blog
 url: "https://silent-han.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 author:
-  name: 'Viktoriya Kapitonenko'
-  last_name: 'Kapitonenko'
+  name: 'J.H Han'
+  last_name: 'Silent han'
   cv: '//kaptn.ru'
   avatar: '/images/avatar.jpeg'
-  github_username:  kaptn3  
-  email: vika@kaptn.ru
+  github_username:  silent-han  
+  email: supercsehan@gmail.com
   vk_id: id201664979
   telegram_name: vikapitoshka 
   logo: '/images/logo.svg'
