--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://silent-han.github.io" # the base hostname & protocol for your site
 author:
   name: 'J.H Han'
   last_name: 'Silent han'
-  cv: '//kaptn.ru'
+  cv: '//github.com/silent-han'
   avatar: '/images/avatar.jpeg'
   github_username:  silent-han  
   email: supercsehan@gmail.com
