--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ author:
   avatar: '/images/avatar.png'
   github_username:  silent-han  
   email: supercsehan@gmail.com
-  vk_id: id201664979
-  telegram_name: vikapitoshka 
+  vk_id: id201664979  # 뭔지는 모르겠음.
+  telegram_name: '' 
   logo: '/images/github.svg'
 
 # Build settings
