--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,6 +1,6 @@
 # blog page sections
-- name: category1
-  href: '/category1/'
+- name: 시스템 프로그래밍
+  href: '/system_prog/'
 
 - name: category2
   href: '/category2/'
